--- a/styles.css
+++ b/styles.css
@@ -38,12 +38,20 @@ body {
 .new-book-button {
   background-color: var(--ctp-mocha-surface2);
   border: none;
-  border-radius: 8px;
+  border-radius: 50%;
   color: var(--ctp-mocha-text);
-  padding: 10px 20px;
+  padding: 10px;
   cursor: pointer;
-  font-size: 16px;
-  margin-bottom: 20px;
+  font-size: 24px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .new-book-button:hover {
