--- a/styles.css
+++ b/styles.css
@@ -36,11 +36,11 @@ body {
 }
 
 .new-book-button {
-  background-color: var(--ctp-mocha-surface2);
+  background-color: var(--ctp-mocha-green);
   border: none;
   border-radius: 50%;
-  color: var(--ctp-mocha-text);
-  padding: 10px;
+  color: var(--ctp-mocha-mantle);
+  padding: 0;
   cursor: pointer;
   font-size: 24px;
   width: 50px;
@@ -55,7 +55,7 @@ body {
 }
 
 .new-book-button:hover {
-  background-color: var(--ctp-mocha-surface1);
+  filter: brightness(0.8);
 }
 
 .book-form {
@@ -77,7 +77,7 @@ body {
 }
 
 .book-form button {
-  background-color: var(--ctp-mocha-surface2);
+  background-color: var(--ctp-mocha-green);
   border: none;
   border-radius: 8px;
   color: var(--ctp-mocha-text);
@@ -87,7 +87,7 @@ body {
 }
 
 .book-form button:hover {
-  background-color: var(--ctp-mocha-surface1);
+  background-color: var(--ctp-mocha-green-dark);
 }
 
 .book-dialog {
@@ -100,4 +100,23 @@ body {
 
 .book-dialog::backdrop {
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.delete-button {
+  background-color: var(--ctp-mocha-red);
+  border: none;
+  border-radius: 50%;
+  color: var(--ctp-mocha-text);
+  cursor: pointer;
+  font-size: 1.5em;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.delete-button:hover {
+  filter: brightness(0.8);
 }
