--- a/full-stack-javascript/javascript/tic-tac-toe/style.css
+++ b/full-stack-javascript/javascript/tic-tac-toe/style.css
@@ -1,1 +1,19 @@
 @import url('https://unpkg.com/@catppuccin/palette/css/catppuccin.css');
+
+.board {
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+  grid-template-rows: repeat(3, 100px);
+  gap: 5px;
+  margin: 20px auto;
+}
+
+.cell {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--catppuccin-base);
+  color: var(--catppuccin-text);
+  font-size: 2rem;
+  cursor: pointer;
+}
